feat(chatclient): implement Chat UI and Chat Session components

--- a/LLMAdapterClient.ChatClient/LLMAdapterClient.ChatClient.csproj
+++ b/LLMAdapterClient.ChatClient/LLMAdapterClient.ChatClient.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LLMAdapterClient.Common\LLMAdapterClient.Common.csproj" />
+    <ProjectReference Include="..\LLMAdapterClient.Publisher\LLMAdapterClient.Publisher.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
